feat: enable public access to movies and update multipart file handling for movie metadata parsing